src/parser/generated/ScheduleParser.ts
// @ts-nocheck -- generated by ANTLR 4.13.2
import type { DecisionState, TokenStream } from 'antlr4'
// Generated from src/parser/grammar/Schedule.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token,
	Interval, IntervalSet
} from 'antlr4';
import ScheduleVisitor from "./ScheduleVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class ScheduleParser extends Parser {
	public static readonly TODAY = 1;
	public static readonly TOMORROW = 2;
	public static readonly START_OF_DAY = 3;
	public static readonly END_OF_DAY = 4;
	public static readonly FREQUENCY = 5;
	public static readonly BY = 6;
	public static readonly BY_TYPE = 7;
	public static readonly INTERVAL = 8;
	public static readonly COUNT = 9;
	public static readonly IANA_ZONE = 10;
	public static readonly ZONE_ABBR = 11;
	public static readonly INTEGER = 12;
	public static readonly QUESTION = 13;
	public static readonly SLASH = 14;
	public static readonly DASH = 15;
	public static readonly TIME_SEPARATOR = 16;
	public static readonly COMMA = 17;
	public static readonly SEMI = 18;
	public static readonly LBRACK = 19;
	public static readonly RBRACK = 20;
	public static readonly WS = 21;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_document = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_dateRange = 2;
	public static readonly RULE_dateValue = 3;
	public static readonly RULE_integerDate = 4;
	public static readonly RULE_timeRange = 5;
	public static readonly RULE_timeValue = 6;
	public static readonly RULE_timeZone = 7;
	public static readonly RULE_frequency = 8;
	public static readonly RULE_frequencyOption = 9;
	public static readonly RULE_byClause = 10;
	public static readonly RULE_byItem = 11;
	public static readonly RULE_signedInteger = 12;
	public static readonly literalNames: (string | null)[] = [ null, "'tdy'", 
                                                            "'tmr'", null, 
                                                            null, null, 
                                                            "'by'", null, 
                                                            "'i'", "'c'", 
                                                            null, null, 
                                                            null, "'?'", 
                                                            "'/'", "'-'", 
                                                            null, "','", 
                                                            "';'", "'['", 
                                                            "']'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "TODAY", 
                                                             "TOMORROW", 
                                                             "START_OF_DAY", 
                                                             "END_OF_DAY", 
                                                             "FREQUENCY", 
                                                             "BY", "BY_TYPE", 
                                                             "INTERVAL", 
                                                             "COUNT", "IANA_ZONE", 
                                                             "ZONE_ABBR", 
                                                             "INTEGER", 
                                                             "QUESTION", 
                                                             "SLASH", "DASH", 
                                                             "TIME_SEPARATOR", 
                                                             "COMMA", "SEMI", 
                                                             "LBRACK", "RBRACK", 
                                                             "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"document", "statement", "dateRange", "dateValue", "integerDate", "timeRange", 
		"timeValue", "timeZone", "frequency", "frequencyOption", "byClause", "byItem", 
		"signedInteger",
	];
	public get grammarFileName(): string { return "Schedule.g4"; }
	public get literalNames(): (string | null)[] { return ScheduleParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return ScheduleParser.symbolicNames; }
	public get ruleNames(): string[] { return ScheduleParser.ruleNames; }
	public get serializedATN(): number[] { return ScheduleParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, ScheduleParser._ATN, ScheduleParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public document(): DocumentContext {
		let localctx: DocumentContext = new DocumentContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, ScheduleParser.RULE_document);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 26;
			this.statement();
			this.state = 31;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 27;
					this.match(ScheduleParser.SEMI);
					this.state = 28;
					this.statement();
					}
					}
				}
				this.state = 33;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			}
			this.state = 35;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===18) {
				{
				this.state = 34;
				this.match(ScheduleParser.SEMI);
				}
			}

			this.state = 37;
			this.match(ScheduleParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, ScheduleParser.RULE_statement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 39;
			this.dateRange();
			this.state = 40;
			this.timeRange();
			this.state = 42;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===10 || _la===11) {
				{
				this.state = 41;
				this.timeZone();
				}
			}

			this.state = 45;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===5) {
				{
				this.state = 44;
				this.frequency();
				}
			}

			this.state = 48;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===6) {
				{
				this.state = 47;
				this.byClause();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public dateRange(): DateRangeContext {
		let localctx: DateRangeContext = new DateRangeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, ScheduleParser.RULE_dateRange);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 50;
			this.dateValue();
			this.state = 53;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===15) {
				{
				this.state = 51;
				this.match(ScheduleParser.DASH);
				this.state = 52;
				this.dateValue();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public dateValue(): DateValueContext {
		let localctx: DateValueContext = new DateValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, ScheduleParser.RULE_dateValue);
		try {
			this.state = 58;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 55;
				this.match(ScheduleParser.TODAY);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 56;
				this.match(ScheduleParser.TOMORROW);
				}
				break;
			case 12:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 57;
				this.integerDate();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public integerDate(): IntegerDateContext {
		let localctx: IntegerDateContext = new IntegerDateContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, ScheduleParser.RULE_integerDate);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 60;
			this.match(ScheduleParser.INTEGER);
			this.state = 67;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===14) {
				{
				this.state = 61;
				this.match(ScheduleParser.SLASH);
				this.state = 62;
				this.match(ScheduleParser.INTEGER);
				this.state = 65;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===14) {
					{
					this.state = 63;
					this.match(ScheduleParser.SLASH);
					this.state = 64;
					this.match(ScheduleParser.INTEGER);
					}
				}

				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public timeRange(): TimeRangeContext {
		let localctx: TimeRangeContext = new TimeRangeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, ScheduleParser.RULE_timeRange);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 69;
			this.timeValue();
			this.state = 72;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===15) {
				{
				this.state = 70;
				this.match(ScheduleParser.DASH);
				this.state = 71;
				this.timeValue();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public timeValue(): TimeValueContext {
		let localctx: TimeValueContext = new TimeValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, ScheduleParser.RULE_timeValue);
		let _la: number;
		try {
			this.state = 91;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 3:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 74;
				this.match(ScheduleParser.START_OF_DAY);
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 75;
				this.match(ScheduleParser.END_OF_DAY);
				}
				break;
			case 16:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 76;
				this.match(ScheduleParser.TIME_SEPARATOR);
				}
				break;
			case 13:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 77;
				this.match(ScheduleParser.QUESTION);
				this.state = 82;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===16) {
					{
					this.state = 78;
					this.match(ScheduleParser.TIME_SEPARATOR);
					this.state = 80;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la===13) {
						{
						this.state = 79;
						this.match(ScheduleParser.QUESTION);
						}
					}

					}
				}

				}
				break;
			case 12:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 84;
				this.match(ScheduleParser.INTEGER);
				this.state = 89;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===16) {
					{
					this.state = 85;
					this.match(ScheduleParser.TIME_SEPARATOR);
					this.state = 87;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la===12 || _la===13) {
						{
						this.state = 86;
						_la = this._input.LA(1);
						if(!(_la===12 || _la===13)) {
						this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						}
					}

					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public timeZone(): TimeZoneContext {
		let localctx: TimeZoneContext = new TimeZoneContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, ScheduleParser.RULE_timeZone);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 93;
			_la = this._input.LA(1);
			if(!(_la===10 || _la===11)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public frequency(): FrequencyContext {
		let localctx: FrequencyContext = new FrequencyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, ScheduleParser.RULE_frequency);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 95;
			this.match(ScheduleParser.FREQUENCY);
			this.state = 100;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===17) {
				{
				{
				this.state = 96;
				this.match(ScheduleParser.COMMA);
				this.state = 97;
				this.frequencyOption();
				}
				}
				this.state = 102;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public frequencyOption(): FrequencyOptionContext {
		let localctx: FrequencyOptionContext = new FrequencyOptionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, ScheduleParser.RULE_frequencyOption);
		try {
			this.state = 107;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 8:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 103;
				this.match(ScheduleParser.INTERVAL);
				this.state = 104;
				this.match(ScheduleParser.INTEGER);
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 105;
				this.match(ScheduleParser.COUNT);
				this.state = 106;
				this.match(ScheduleParser.INTEGER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public byClause(): ByClauseContext {
		let localctx: ByClauseContext = new ByClauseContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, ScheduleParser.RULE_byClause);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 109;
			this.match(ScheduleParser.BY);
			this.state = 110;
			this.match(ScheduleParser.LBRACK);
			this.state = 111;
			this.byItem();
			this.state = 116;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===17) {
				{
				{
				this.state = 112;
				this.match(ScheduleParser.COMMA);
				this.state = 113;
				this.byItem();
				}
				}
				this.state = 118;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 119;
			this.match(ScheduleParser.RBRACK);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public byItem(): ByItemContext {
		let localctx: ByItemContext = new ByItemContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, ScheduleParser.RULE_byItem);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 121;
			this.match(ScheduleParser.BY_TYPE);
			this.state = 122;
			this.match(ScheduleParser.LBRACK);
			this.state = 123;
			this.signedInteger();
			this.state = 128;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===17) {
				{
				{
				this.state = 124;
				this.match(ScheduleParser.COMMA);
				this.state = 125;
				this.signedInteger();
				}
				}
				this.state = 130;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 131;
			this.match(ScheduleParser.RBRACK);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public signedInteger(): SignedIntegerContext {
		let localctx: SignedIntegerContext = new SignedIntegerContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, ScheduleParser.RULE_signedInteger);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 134;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===15) {
				{
				this.state = 133;
				this.match(ScheduleParser.DASH);
				}
			}

			this.state = 136;
			this.match(ScheduleParser.INTEGER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!ScheduleParser.__ATN) {
			ScheduleParser.__ATN = new ATNDeserializer().deserialize(ScheduleParser._serializedATN);
		}

		return ScheduleParser.__ATN;
	}


	static DecisionsToDFA = ScheduleParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class DocumentContext extends ParserRuleContext {
	constructor(parser?: ScheduleParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public statement_list(): StatementContext[] {
		return this.getTypedRuleContexts(StatementContext) as StatementContext[];
	}
	public statement(i: number): StatementContext {
		return this.getTypedRuleContext(StatementContext, i) as StatementContext;
	}
	public EOF(): TerminalNode {
		return this.getToken(ScheduleParser.EOF, 0);
	}
	public SEMI_list(): TerminalNode[] {
	    	return this.getTokens(ScheduleParser.SEMI);
	}
	public SEMI(i: number): TerminalNode {
		return this.getToken(ScheduleParser.SEMI, i);
	}
    public get ruleIndex(): number {
    	return ScheduleParser.RULE_document;
	}
	// @Override
	public accept<Result>(visitor: ScheduleVisitor<Result>): Result {
		if (visitor.visitDocument) {
			return visitor.visitDocument(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class StatementContext extends ParserRuleContext {
	constructor(parser?: ScheduleParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public dateRange(): DateRangeContext {
		return this.getTypedRuleContext(DateRangeContext, 0) as DateRangeContext;
	}
	public timeRange(): TimeRangeContext {
		return this.getTypedRuleContext(TimeRangeContext, 0) as TimeRangeContext;
	}
	public timeZone(): TimeZoneContext {
		return this.getTypedRuleContext(TimeZoneContext, 0) as TimeZoneContext;
	}
	public frequency(): FrequencyContext {
		return this.getTypedRuleContext(FrequencyContext, 0) as FrequencyContext;
	}
	public byClause(): ByClauseContext {
		return this.getTypedRuleContext(ByClauseContext, 0) as ByClauseContext;
	}
    public get ruleIndex(): number {
    	return ScheduleParser.RULE_statement;
	}
	// @Override
	public accept<Result>(visitor: ScheduleVisitor<Result>): Result {
		if (visitor.visitStatement) {
			return visitor.visitStatement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class DateRangeContext extends ParserRuleContext {
	constructor(parser?: ScheduleParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public dateValue_list(): DateValueContext[] {
		return this.getTypedRuleContexts(DateValueContext) as DateValueContext[];
	}
	public dateValue(i: number): DateValueContext {
		return this.getTypedRuleContext(DateValueContext, i) as DateValueContext;
	}
	public DASH(): TerminalNode {
		return this.getToken(ScheduleParser.DASH, 0);
	}
    public get ruleIndex(): number {
    	return ScheduleParser.RULE_dateRange;
	}
	// @Override
	public accept<Result>(visitor: ScheduleVisitor<Result>): Result {
		if (visitor.visitDateRange) {
			return visitor.visitDateRange(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class DateValueContext extends ParserRuleContext {
	constructor(parser?: ScheduleParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public TODAY(): TerminalNode {
		return this.getToken(ScheduleParser.TODAY, 0);
	}
	public TOMORROW(): TerminalNode {
		return this.getToken(ScheduleParser.TOMORROW, 0);
	}
	public integerDate(): IntegerDateContext {
		return this.getTypedRuleContext(IntegerDateContext, 0) as IntegerDateContext;
	}
    public get ruleIndex(): number {
    	return ScheduleParser.RULE_dateValue;
	}
	// @Override
	public accept<Result>(visitor: ScheduleVisitor<Result>): Result {
		if (visitor.visitDateValue) {
			return visitor.visitDateValue(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class IntegerDateContext extends ParserRuleContext {
	constructor(parser?: ScheduleParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public INTEGER_list(): TerminalNode[] {
	    	return this.getTokens(ScheduleParser.INTEGER);
	}
	public INTEGER(i: number): TerminalNode {
		return this.getToken(ScheduleParser.INTEGER, i);
	}
	public SLASH_list(): TerminalNode[] {
	    	return this.getTokens(ScheduleParser.SLASH);
	}
	public SLASH(i: number): TerminalNode {
		return this.getToken(ScheduleParser.SLASH, i);
	}
    public get ruleIndex(): number {
    	return ScheduleParser.RULE_integerDate;
	}
	// @Override
	public accept<Result>(visitor: ScheduleVisitor<Result>): Result {
		if (visitor.visitIntegerDate) {
			return visitor.visitIntegerDate(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class TimeRangeContext extends ParserRuleContext {
	constructor(parser?: ScheduleParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public timeValue_list(): TimeValueContext[] {
		return this.getTypedRuleContexts(TimeValueContext) as TimeValueContext[];
	}
	public timeValue(i: number): TimeValueContext {
		return this.getTypedRuleContext(TimeValueContext, i) as TimeValueContext;
	}
	public DASH(): TerminalNode {
		return this.getToken(ScheduleParser.DASH, 0);
	}
    public get ruleIndex(): number {
    	return ScheduleParser.RULE_timeRange;
	}
	// @Override
	public accept<Result>(visitor: ScheduleVisitor<Result>): Result {
		if (visitor.visitTimeRange) {
			return visitor.visitTimeRange(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class TimeValueContext extends ParserRuleContext {
	constructor(parser?: ScheduleParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public START_OF_DAY(): TerminalNode {
		return this.getToken(ScheduleParser.START_OF_DAY, 0);
	}
	public END_OF_DAY(): TerminalNode {
		return this.getToken(ScheduleParser.END_OF_DAY, 0);
	}
	public TIME_SEPARATOR(): TerminalNode {
		return this.getToken(ScheduleParser.TIME_SEPARATOR, 0);
	}
	public QUESTION_list(): TerminalNode[] {
	    	return this.getTokens(ScheduleParser.QUESTION);
	}
	public QUESTION(i: number): TerminalNode {
		return this.getToken(ScheduleParser.QUESTION, i);
	}
	public INTEGER_list(): TerminalNode[] {
	    	return this.getTokens(ScheduleParser.INTEGER);
	}
	public INTEGER(i: number): TerminalNode {
		return this.getToken(ScheduleParser.INTEGER, i);
	}
    public get ruleIndex(): number {
    	return ScheduleParser.RULE_timeValue;
	}
	// @Override
	public accept<Result>(visitor: ScheduleVisitor<Result>): Result {
		if (visitor.visitTimeValue) {
			return visitor.visitTimeValue(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class TimeZoneContext extends ParserRuleContext {
	constructor(parser?: ScheduleParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public IANA_ZONE(): TerminalNode {
		return this.getToken(ScheduleParser.IANA_ZONE, 0);
	}
	public ZONE_ABBR(): TerminalNode {
		return this.getToken(ScheduleParser.ZONE_ABBR, 0);
	}
    public get ruleIndex(): number {
    	return ScheduleParser.RULE_timeZone;
	}
	// @Override
	public accept<Result>(visitor: ScheduleVisitor<Result>): Result {
		if (visitor.visitTimeZone) {
			return visitor.visitTimeZone(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FrequencyContext extends ParserRuleContext {
	constructor(parser?: ScheduleParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public FREQUENCY(): TerminalNode {
		return this.getToken(ScheduleParser.FREQUENCY, 0);
	}
	public COMMA_list(): TerminalNode[] {
	    	return this.getTokens(ScheduleParser.COMMA);
	}
	public COMMA(i: number): TerminalNode {
		return this.getToken(ScheduleParser.COMMA, i);
	}
	public frequencyOption_list(): FrequencyOptionContext[] {
		return this.getTypedRuleContexts(FrequencyOptionContext) as FrequencyOptionContext[];
	}
	public frequencyOption(i: number): FrequencyOptionContext {
		return this.getTypedRuleContext(FrequencyOptionContext, i) as FrequencyOptionContext;
	}
    public get ruleIndex(): number {
    	return ScheduleParser.RULE_frequency;
	}
	// @Override
	public accept<Result>(visitor: ScheduleVisitor<Result>): Result {
		if (visitor.visitFrequency) {
			return visitor.visitFrequency(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FrequencyOptionContext extends ParserRuleContext {
	constructor(parser?: ScheduleParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public INTERVAL(): TerminalNode {
		return this.getToken(ScheduleParser.INTERVAL, 0);
	}
	public INTEGER(): TerminalNode {
		return this.getToken(ScheduleParser.INTEGER, 0);
	}
	public COUNT(): TerminalNode {
		return this.getToken(ScheduleParser.COUNT, 0);
	}
    public get ruleIndex(): number {
    	return ScheduleParser.RULE_frequencyOption;
	}
	// @Override
	public accept<Result>(visitor: ScheduleVisitor<Result>): Result {
		if (visitor.visitFrequencyOption) {
			return visitor.visitFrequencyOption(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ByClauseContext extends ParserRuleContext {
	constructor(parser?: ScheduleParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public BY(): TerminalNode {
		return this.getToken(ScheduleParser.BY, 0);
	}
	public LBRACK(): TerminalNode {
		return this.getToken(ScheduleParser.LBRACK, 0);
	}
	public byItem_list(): ByItemContext[] {
		return this.getTypedRuleContexts(ByItemContext) as ByItemContext[];
	}
	public byItem(i: number): ByItemContext {
		return this.getTypedRuleContext(ByItemContext, i) as ByItemContext;
	}
	public RBRACK(): TerminalNode {
		return this.getToken(ScheduleParser.RBRACK, 0);
	}
	public COMMA_list(): TerminalNode[] {
	    	return this.getTokens(ScheduleParser.COMMA);
	}
	public COMMA(i: number): TerminalNode {
		return this.getToken(ScheduleParser.COMMA, i);
	}
    public get ruleIndex(): number {
    	return ScheduleParser.RULE_byClause;
	}
	// @Override
	public accept<Result>(visitor: ScheduleVisitor<Result>): Result {
		if (visitor.visitByClause) {
			return visitor.visitByClause(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

